@@ -47,6 +47,16 @@ func GetTemp() string {
 	return tmp
 }
 
+// VerifyTemp allows the definition of a custom folder to be used for deplyments and file creations
+func VerifyTemp(f string) {
+
+	if _, err := os.Stat(f); os.IsNotExist(err) {
+		msg.Custom(errors.New("Cannot find the custom temporary folder"), "fatal")
+	}
+
+	return
+}
+
 // GetLinuxFlavor returns the Linux flavor by looking into the lsb_release
 func GetLinuxFlavor() string {
 
